# libc_replacer

./: .bazelignore  .bazelrc  .clang-format  .gitignore  BUILD.bazel  DEVEL.md  MODULE.bazel  README.md  cc.bzl  defs.bzl
.bcr/: metadata.template.json
.github/actions/setup/: action.yml
.github/workflows/: bazel-steward.yml  release.yml  release_prep.sh  tests.yml
cc/: internal_defs.bzl
cc/internal/: BUILD.bazel  internal.h
cc/time/: BUILD.bazel  time.c  time.h
development/clang_tidy/: .clang-tidy  BUILD.bazel  MODULE.bazel  ext.bzl
development/clang_tools/: .clang-tidy  BUILD.bazel  MODULE.bazel  clang_tidy.bzl  ext.bzl
development/cli/: common.bash  run_integration_test.bash  run_unit_test.bash  style_check.bash
development/cli/style_check/: buildifier.bash  clang_format.bash  clang_tidy_example.bash  clang_tidy_integration_test.bash  clang_tidy_root.bash
development/testing/: BUILD.bazel  MODULE.bazel  testing.h
examples/: MODULE.bazel  utility.bzl
examples/cc/: BUILD.bazel  time_test.cpp
examples/cc/clock/: test.c
examples/cc/free/: test.c
examples/cc/malloc/: test.c
examples/cc/time/: test.c
examples/cc/timespec_get/: test.c
integration_test/bazel/: MODULE.bazel
integration_test/bazel/cc/calloc/: BUILD.bazel  test.c
integration_test/bazel/cc/clock/: BUILD.bazel  test.c
integration_test/bazel/cc/clock_gettime/: BUILD.bazel  test.c
integration_test/bazel/cc/free/: BUILD.bazel  test.c
integration_test/bazel/cc/malloc/: BUILD.bazel  test.c
integration_test/bazel/cc/realloc/: BUILD.bazel  test.c
integration_test/bazel/cc/time/: BUILD.bazel  test.c
integration_test/bazel/cc/timespec_get/: BUILD.bazel  test.c
integration_test_bazel/: MODULE.bazel
libc_replacer/cc/: BUILD.bazel  calloc.h  clock.h  clock_gettime.h  defs.bzl  free.h  interface.h  internal_defs.bzl  malloc.h  realloc.h  time.h  timespec_get.h
libc_replacer/cc/calloc/: BUILD.bazel  calloc.c  calloc.h
libc_replacer/cc/clock/: BUILD.bazel  clock.c  clock.h
libc_replacer/cc/clock_gettime/: BUILD.bazel  clock_gettime.c  clock_gettime.h  features.h
libc_replacer/cc/free/: BUILD.bazel  free.c  free.h
libc_replacer/cc/internal/: BUILD.bazel  declaration_helper.h  definition_helper.h  definition_helper_syscall.h  definition_helper_unsupported.h  internal.h  macro_impl.h
libc_replacer/cc/internal/unit_test/: BUILD.bazel  macro_impl_test.c
libc_replacer/cc/malloc/: BUILD.bazel  malloc.c  malloc.h
libc_replacer/cc/realloc/: BUILD.bazel  realloc.c  realloc.h
libc_replacer/cc/time/: BUILD.bazel  time.c  time.h
libc_replacer/cc/timespec_get/: BUILD.bazel  timespec_get.c  timespec_get.h
