"""Module for `libc_replacer`.
"""

module(
    name = "libc_replacer",
    version = "0.0.0",
)

################################
#
# Dev-dependencies
#
################################

# `hermetic_cc_toolchain` for C/C++ toolchain
bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.1",
    dev_dependency = True,
)

cc_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
    dev_dependency = True,
)
use_repo(cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
    dev_dependency = True,
)

# `buildifier_prebuilt` for buildifier
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)

# `bazel_clang_tidy` and `toolchains_llvm` for clang-tidy
bazel_dep(name = "bazel_clang_tidy", version = "", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    commit = "a01e5e262e6d604c21ed11c420a2a245397b995a",
    remote = "https://github.com/erenon/bazel_clang_tidy.git",
)

bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain_llvm")
