"""Module for `libc_replacer`.
"""

module(
    name = "libc_replacer",
    version = "0.0.0",
)

################################
#
# Dev-dependencies
#
################################

# `hermetic_cc_toolchain` for C/C++ toolchain
bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.1",
    dev_dependency = True,
)

cc_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
    dev_dependency = True,
)
use_repo(cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
    dev_dependency = True,
)

# `buildifier_prebuilt` for buildifier
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)

# `clang_tidy` for clang-tidy
bazel_dep(name = "clang_tidy", version = "", dev_dependency = True)
local_path_override(
    module_name = "clang_tidy",
    path = "development/clang_tidy",
)
