"""Test module for `libc_replacer`.
"""

module(
    name = "libc_replacer_examples",
    version = "0.0.0",
)

bazel_dep(name = "libc_replacer", version = "")
local_path_override(
    module_name = "libc_replacer",
    path = "..",
)

# Register toolchain for C/C++

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.1",
)

cc_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
)
use_repo(cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
)

# For facilitating tests in C++
# Not using `bazel_dep` because googletest module uses `use_repo_rule`
# which is not supported in Bazel 6.x
bazel_dep(name = "googletest", version = "1.15.2")
archive_override(
    module_name = "googletest",
    urls = ["https://github.com/google/googletest/releases/download/v1.15.2/googletest-1.15.2.tar.gz"],
    strip_prefix = "googletest-1.15.2",
)
