"""Test module for `libc_replacer`.
"""

module(
    name = "libc_replacer_examples",
    version = "0.0.0",
)

bazel_dep(name = "libc_replacer", version = "", dev_dependency = True)
local_path_override(
    module_name = "libc_replacer",
    path = "..",
)

# Register toolchain for C/C++

bazel_dep(
    name = "hermetic_cc_toolchain",
    version = "3.1.1",
    dev_dependency = True,
)

cc_toolchains = use_extension(
    "@hermetic_cc_toolchain//toolchain:ext.bzl",
    "toolchains",
    dev_dependency = True,
)
use_repo(cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
    "@zig_sdk//toolchain:darwin_amd64",
    "@zig_sdk//toolchain:darwin_arm64",
    "@zig_sdk//toolchain:windows_amd64",
    "@zig_sdk//toolchain:windows_arm64",
    dev_dependency = True,
)

# Utility for testing C++ code
bazel_dep(name = "googletest", version = "1.15.2", dev_dependency = True)

# `bazel_clang_tidy` and `toolchains_llvm` for clang-tidy
bazel_dep(name = "bazel_clang_tidy", version = "", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    commit = "26417c9635a9b0ddc6c5b1ff73220934423d9372",
    remote = "https://github.com/yuyawk/bazel_clang_tidy.git",
)

bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)
llvm.toolchain(
    llvm_version = "19.1.0",
)
use_repo(llvm, "llvm_toolchain_llvm")
