"""Module for clang-tidy configuration internally used in this repository.
"""

module(
    name = "clang_tidy",
    version = "0.0.0",
)

bazel_dep(name = "toolchains_llvm", version = "1.2.0")

clang_tidy_deps = use_extension(
    "//:ext.bzl",
    "clang_tidy_deps",
)
use_repo(
    clang_tidy_deps,
    "bazel_clang_tidy",
    "llvm_toolchain_llvm",
)
