"""Module for clang tools internally used in this repository.
"""

module(
    name = "clang_tools",
    version = "0.0.0",
)

bazel_dep(name = "toolchains_llvm", version = "1.3.0")

clang_tools_deps = use_extension(
    "//:ext.bzl",
    "clang_tools_deps",
)
use_repo(
    clang_tools_deps,
    "bazel_clang_tidy",
    "llvm_toolchain_llvm",
)
