load(
    "@libc_replacer//:cc.bzl",
    "cc_libc_replacer_binary",
    "cc_libc_replacer_test",
)

cc_libc_replacer_binary(
    name = "time_test_binary",
    testonly = True,
    srcs = ["time_test.cpp"],
    deps = ["@googletest//:gtest_main"],
)

cc_libc_replacer_test(
    name = "time_test",
    timeout = "short",
    srcs = ["time_test.cpp"],
    deps = ["@googletest//:gtest_main"],
)

sh_test(
    name = "binary_test",
    timeout = "short",
    srcs = [":time_test_binary"],
)
