"""Define public include point.
"""

filegroup(
    name = "cc",
    srcs = ["interface.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "adding_include_prefix",
    # Explicitly set `includes`
    # in order to allow the user to include `<libc_replacer/cc/interface.h>`
    includes = ["../.."],
    visibility = ["//visibility:public"],
)
