"""C/C++ implementations to replace `calloc`.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "calloc",
    srcs = ["calloc.c"],
    hdrs = ["calloc.h"],
    linkopts = ["-Wl,-wrap=calloc"],
    visibility = ["//libc_replacer/cc:__pkg__"],
    deps = ["//libc_replacer/cc/internal"],
    alwayslink = True,
)
