"""C/C++ implementations to replace `clock`.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "clock",
    srcs = ["clock.c"],
    hdrs = ["clock.h"],
    linkopts = ["-Wl,-wrap=clock"],
    visibility = ["//libc_replacer/cc:__pkg__"],
    deps = ["//libc_replacer/cc/internal"],
    alwayslink = True,
)
