"""Internal C/C++ implementations.
"""

cc_library(
    name = "internal",
    hdrs = [
        "declaration_helper.h",
        "definition_helper.h",
        "definition_helper_syscall.h",
        "macro_impl.h",
    ],
    visibility = [
        "//libc_replacer/cc:__subpackages__",
        "//libc_replacer/cc/internal/unit_test:__pkg__",
    ],
)
