"""Internal C/C++ implementations.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "internal",
    hdrs = [
        "declaration_helper.h",
        "definition_helper.h",
        "macro_impl.h",
    ],
    visibility = [
        "//libc_replacer/cc:__subpackages__",
        "//libc_replacer/cc/internal/unit_test:__pkg__",
    ],
)
