"""C/C++ implementations to replace `malloc`.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "malloc",
    srcs = ["malloc.c"],
    hdrs = ["malloc.h"],
    linkopts = ["-Wl,-wrap=malloc"],
    visibility = ["//libc_replacer/cc:__pkg__"],
    deps = ["//libc_replacer/cc/internal"],
    alwayslink = True,
)
