"""C/C++ implementations to replace `realloc`.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "realloc",
    srcs = ["realloc.c"],
    hdrs = ["realloc.h"],
    linkopts = ["-Wl,-wrap=realloc"],
    visibility = ["//libc_replacer/cc:__pkg__"],
    deps = ["//libc_replacer/cc/internal"],
    alwayslink = True,
)
