"""C/C++ implementations to replace `time`.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "time",
    srcs = ["time.c"],
    hdrs = ["time.h"],
    linkopts = ["-Wl,-wrap=time"],
    visibility = ["//libc_replacer/cc:__pkg__"],
    deps = ["//libc_replacer/cc/internal"],
    alwayslink = True,
)
