"""C/C++ implementations to replace `time`.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "timespec_get",
    srcs = ["timespec_get.c"],
    hdrs = ["timespec_get.h"],
    linkopts = ["-Wl,-wrap=timespec_get"],
    visibility = ["//libc_replacer/cc:__pkg__"],
    deps = ["//libc_replacer/cc/internal"],
    alwayslink = True,
)
