load(
    "@libc_replacer//:cc.bzl",
    "cc_libc_replacer_binary",
    "cc_libc_replacer_test",
)
load("@rules_shell//shell:sh_test.bzl", "sh_test")

cc_libc_replacer_binary(
    name = "test_binary",
    testonly = True,
    srcs = ["test.c"],
    libs_to_replace = ["calloc"],
    deps = ["@testing"],
)

cc_libc_replacer_test(
    name = "test",
    timeout = "short",
    srcs = ["test.c"],
    libs_to_replace = ["calloc"],
    deps = ["@testing"],
)

sh_test(
    name = "binary_test",
    timeout = "short",
    srcs = [":test_binary"],
)
