"""Unit tests for `//libc_replacer/cc/internal`.
"""

load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_test(
    name = "unit_test",
    timeout = "short",
    srcs = [
        "macro_impl_test.c",
    ],
    features = ["fully_static_link"],
    linkstatic = True,
    deps = [
        "//libc_replacer/cc/internal",
        "@testing",
    ],
)
